This  took  awhile but  it  is complete

--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
 
 
     </div>
+    <div class="all_bot">
+        <div class="bot">
+          <div class="bot_left">
+            <h2><strong>Call to action! It's time!</strong></h2>
+            <p>Sign up for our product by clicking that button right over there!</p>
+          </div>
+          <button type="button" name="button">Sign up</button>
+        </div>
+    </div>
+  
+      <footer>
+        <p><strong>Copyleft &#127279;</strong></p>
+      </footer>
 
 </div>
 </body>
